<resources>
    <string name="text_button_sum">Sum</string>
    <string name="text_button_mult">mult</string>
    <string name="text_for_num1">Num 1</string>
    <string name="text_for_num2">Num 2</string>
    <string name="text_result">Result</string>
    <string name="hint_value">Value</string>
    <string name="text_open_link">Open link</string>
    <string name="value_result">Result: </string>
    <string name="text_button_start">Start</string>
    <string name="text_button_stop">Stop</string>
    <string name="list">List</string>
    <string name="timer">Timer</string>
    <string name="app_name">MobilePO</string>
    <string name="change_frag">Change Fragment</string>
    <string name="btn_text_anim_rotate">Rotate</string>
    <string name="btn_text_anim_scale">Scale</string>
    <string name="btn_text_anim_tarnsfer">Transfer</string>
    <string name="btn_text_anim_transpar">Transparency</string>
    <string name="text_anim">Animation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>