<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.example.mobilepo.viewmodel.OpenLinkVM" />
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpenLinkActivity"
    android:padding="16dp"
    android:orientation="vertical">
    <EditText
        android:id="@+id/input_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/hint_value"
        android:inputType="textPersonName"
        android:text="@={vm.link}"/>
    <Button
        android:id="@+id/button_open_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_open_link"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:onClick="@{() -> vm.onClickOpenLink()}"
        />
    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="@{() -> vm.onStartTimer()}"
        android:text="@string/text_button_start" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:onClick="@{() -> vm.onStopTimer()}"
        android:text="@string/text_button_stop" />
</LinearLayout>
</layout>