<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="vm"
            type="com.example.mobilepo.viewmodel.MainActivityVM" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".viewmodel.fragments.Multfragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_for_num1"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                />

            <EditText
                android:id="@+id/num1_mult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/hint_value"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:text="@={vm.number1}"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_for_num2"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                />

            <EditText
                android:id="@+id/num2_mult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:ems="10"
                android:hint="@string/hint_value"
                android:inputType="number"
                android:text="@={vm.number2}"/>

            <TextView
                android:id="@+id/result_mult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_result"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                />

            <Button
                android:id="@+id/button_mult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_button_mult"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:onClick="@{()->vm.onClickeMult()}"
                />

        </LinearLayout>
    </FrameLayout>
</layout>